--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,12 +57,20 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  fonts:
+    - family: Philosopher
+      fonts:
+        - asset: assets/fonts/Philosopher-Regular.ttf
+        - asset: assets/fonts/Philosopher-Bold.ttf
+        - asset: assets/fonts/Philosopher-BoldItalic.ttf
+        - asset: assets/fonts/Philosopher-Italic.ttf
+          style: italic
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
